ecmascript/parser/tests/test262-error-references/fail/2d1410e37ecc3647.js.stderr
error: Expected LBrace, got None
 --> $DIR/tests/test262-parser/fail/2d1410e37ecc3647.js:1:23
  |
1 | function f(a, ...b = 0)
  |                       ^

error: TS1048
 --> $DIR/tests/test262-parser/fail/2d1410e37ecc3647.js:1:18
  |
1 | function f(a, ...b = 0)
  |                  ^

